// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms/Heading Colors 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-primary size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-inverted size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="heading color-base size-xs weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-sm weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-lg weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-2xl weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
</div>
`;

exports[`Storyshots Atoms/Heading Weights 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <header
    className="heading color-base size-md weight-normal"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
  <header
    className="heading color-base size-md weight-bold"
  >
    Consent doubt Tuckborough challenge destroying.
  </header>
</div>
`;
